// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`can add new item 1`] = `
Object {
  "items": Array [
    Object {
      "image": "",
      "name": "Book of G.K. Chesterton",
      "price": 11,
    },
  ],
}
`;

exports[`can add new item 2`] = `
Array [
  Object {
    "items": Array [
      Object {
        "image": "",
        "name": "Chesterton",
        "price": 10,
      },
    ],
  },
  Object {
    "items": Array [
      Object {
        "image": "",
        "name": "Book of G.K. Chesterton",
        "price": 10,
      },
    ],
  },
  Object {
    "items": Array [
      Object {
        "image": "",
        "name": "Book of G.K. Chesterton",
        "price": 11,
      },
    ],
  },
]
`;
